# OpenGLTest

./: CMakeLists.txt  glad.c  main.cpp  readme.md
application/: CmakeLists.txt  application.cpp  application.h
assets/Shader/: fragment.glsl  vertex.glsl
glframework/: CmakeLists.txt  core.h  shader.cpp  shader.h  texture.cpp  texture.h
